<resources>
    <string name="app_name">Morus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="menu_profile">User</string>
    <string name="menu_delivery">User</string>
    <string name="menu_product">User</string>
    <string name="menu_favourite">User</string>
    <string name="menu_menu">User</string>
    <string name="menu_seller">User</string>
    <string name="menu_price">User</string>
    <string name="menu_message">User</string>

    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
