<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/menu_profile"
        />
    <item
        android:id="@+id/nav_delivery"
        android:title="@string/menu_delivery"
        />
    <item
        android:id="@+id/nav_product"
        android:title="@string/menu_product"
        />
    <item
        android:id="@+id/nav_favourite"
        android:title="@string/menu_favourite"
        />
    <item
        android:id="@+id/nav_menu"
        android:title="@string/menu_menu"
        />
    <item
        android:id="@+id/nav_seller"
        android:title="@string/menu_seller"
        />
    <item
        android:id="@+id/nav_price"
        android:title="@string/menu_price"
        />
    <item
        android:id="@+id/nav_message"
        android:title="@string/menu_message"
        />

</menu>
